nautilus_trader/core/rust/model.pxd

# Warning, this file is autogenerated by cbindgen. Don't modify this manually. */

from libc.stdint cimport int64_t
from libc.stdint cimport uint8_t
from libc.stdint cimport uint64_t
from libc.stdint cimport uintptr_t


cdef extern from "../includes/model.h":

  const uint8_t FIXED_EXPONENT # = 9

  const double FIXED_PRECISION # = 0.000000001

  cdef enum BookLevel:
    L1_TBBO # = 1,
    L2_MBP # = 2,
    L3_MBO # = 3,

  cdef enum OrderSide:
    Buy # = 1,
    Sell # = 2,

  cdef struct BTreeMap_BookPrice__Level:
    pass

  cdef struct HashMap_u64__BookPrice:
    pass

  cdef struct String:
    pass

  cdef struct Symbol:
    String *value;

  cdef struct Venue:
    String *value;

  cdef struct InstrumentId:
    Symbol symbol;
    Venue venue;
    String *value;

  cdef struct Price:
    int64_t value;
    uint8_t precision;

  cdef struct Quantity:
    uint64_t value;
    uint8_t precision;

  cdef struct Ladder:
    OrderSide side;
    BTreeMap_BookPrice__Level *levels;
    HashMap_u64__BookPrice *cache;

  cdef struct OrderBook:
    Ladder bids;
    Ladder asks;
    InstrumentId instrument_id;
    BookLevel book_level;
    OrderSide last_side;
    int64_t ts_last;

  Symbol symbol_new(uint8_t *ptr, uintptr_t length);

  void symbol_free(Symbol s);

  const uint8_t *symbol_as_utf8(Symbol s);

  Venue venue_new(uint8_t *ptr, uintptr_t length);

  void venue_free(Venue v);

  const uint8_t *venue_as_utf8(Venue v);

  void instrument_id_free(InstrumentId id);

  const uint8_t *instrument_id_as_utf8(InstrumentId id);

  Price price_new(double value, uint8_t precision);

  uint8_t price_eq(const Price *a, const Price *b);

  Quantity quantity_new(double value, uint8_t precision);

  OrderBook order_book_new(InstrumentId instrument_id, BookLevel book_level);
